--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [USER]
-data_file=/home/davit/Documents/Projects/Astronomy_Task_v_2/cleaned_stars (2).tsv
-fov_v=100
-fov_h=70
-ra_user=50
-dec_user=50
-n=50
+data_file = /home/davit/Documents/Projects/Astronomy_Task_v_2/cleaned_stars (2).tsv
+fov_v = 100
+fov_h = 70
+ra_user = 50
+dec_user = 50
+n = 10
+vec_sort_mag = 0
+vec_sort_dist = 0
